[gd_scene load_steps=5 format=2]

[ext_resource path="res://Box.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Companion.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=2]
radius = 118.996

[sub_resource type="Animation" id=1]
resource_name = "Setup"
length = 6.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Base/Barrel/Box:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.0617591, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 5, 6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Base/Barrel/Box4:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.0439717, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 4, 5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Base/Box:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.0123909, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Base/Box:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.014, -0.25, 0, 0.25, 0, 0.109094, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 2 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Base/Box3:scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.0222545, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 2, 4 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Base/Box2:scale:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.0222545, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 2, 4 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Base:position:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 4.76837e-07, -0.25, 0, 0.25, 0, 1.00033, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 2, 4 )
}

[node name="Companion" type="Node2D"]
scale = Vector2( 8, 8 )
script = ExtResource( 2 )

[node name="Detector" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource( 2 )

[node name="Base" type="Node2D" parent="."]
position = Vector2( 1.00033, 0 )

[node name="Box" type="Sprite" parent="Base"]
scale = Vector2( 0.0123909, 0.109094 )
texture = ExtResource( 1 )
offset = Vector2( 50, 0 )

[node name="Box2" type="Polygon2D" parent="Base"]
position = Vector2( 1.00034, 4.99219 )
scale = Vector2( 0.0222545, 0.00471607 )
offset = Vector2( -87.7169, -45.2611 )
texture = ExtResource( 1 )
polygon = PoolVector2Array( -2.18396, -11.0624, 2.3797, -25.9716, 6.94339, -29.2847, 12.5602, -25.9716, 16.7728, -14.3755, 18.8792, 7.15985, 20.9855, 33.665, 100, 0, 100, 100, 20.9855, 61.8266, 19.5813, 86.6752, 15.0176, 114.837, 8.3476, 119.807, 2.02866, 113.18, -2.18396, 98.2712, -4.9924, 70.1096, -5.69449, 40.2912, -4.9924, 10.473 )

[node name="Box2" type="Sprite" parent="Base/Box2"]
modulate = Color( 0.31, 0.31, 0.31, 1 )
position = Vector2( -80.0811, 0.201294 )
scale = Vector2( 0.115349, 0.558259 )
texture = ExtResource( 1 )

[node name="Box3" type="Polygon2D" parent="Base"]
position = Vector2( 1.07051, -4.97357 )
scale = Vector2( 0.0222545, 0.00471607 )
offset = Vector2( -90.8699, -45.2612 )
texture = ExtResource( 1 )
polygon = PoolVector2Array( -2.18396, -11.0624, 2.3797, -25.9716, 6.94339, -29.2847, 12.5602, -25.9716, 16.7728, -14.3755, 18.8792, 7.15985, 20.9855, 33.665, 100, 0, 100, 100, 20.9855, 61.8266, 19.5813, 86.6752, 15.0176, 114.837, 8.3476, 119.807, 2.02866, 113.18, -2.18396, 98.2712, -4.9924, 70.1096, -5.69449, 40.2912, -4.9924, 10.473 )

[node name="Box2" type="Sprite" parent="Base/Box3"]
modulate = Color( 0.31, 0.31, 0.31, 1 )
position = Vector2( -83.0834, 0.177734 )
scale = Vector2( 0.115349, 0.558259 )
texture = ExtResource( 1 )

[node name="Barrel" type="Node2D" parent="Base"]
position = Vector2( 0.678682, 0 )

[node name="Box4" type="Polygon2D" parent="Base/Barrel"]
position = Vector2( 1.24225, -2.55135 )
scale = Vector2( 0.0439717, 0.0439717 )
texture = ExtResource( 1 )
polygon = PoolVector2Array( 0.0971222, 10.1513, 56.3804, 2.61332, 116.255, 12.6568, 116.684, 98.0939, 56.883, 114.677, 0, 100, -3.92312, 82.5155, -40.2807, 58.0439, -3.42058, 30.2524 )

[node name="Box" type="Polygon2D" parent="Base/Barrel"]
position = Vector2( 6.18427, -0.7621 )
scale = Vector2( 0.0617591, 0.0159347 )
texture = ExtResource( 1 )
polygon = PoolVector2Array( 0, 0, 87.02, -2.53415, 87.0362, -37.2315, 91.8992, -36.7079, 96.421, -2.53415, 101.22, -2.67657, 101.355, 99.4175, 96.7623, 99.4175, 92.1694, 130.831, 87.0362, 130.831, 87.1713, 100, 0, 100 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Setup"
playback_speed = 5.0
anims/Setup = SubResource( 1 )

[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
